refactor: apply Validator pattern to all entities (cadastro + financeiro)
Replace ad-hoc BeanValidationMessage creation with Validator.of() for
consistent message resolution via MessageSource:

- String fields: Validator.of(value, label, violations).notBlank().maxLength(n)
- Object/enum fields: Validator.of(value, label, violations).notNull()
- Value Objects: unchanged (ValidationUtils.validateAndGet)
- Business-rule messages: BeanValidationMessage with specific code + PT fallback

Entities updated: Setor, UnidadeNegocio, CentroCusto, CondicaoPagamento,
ContaBancaria, PlanoContas, TituloCategoria, TituloSetor,
MovimentacaoFinanceira, Titulo (including all inline validation methods).

PerfilEntity and UsuarioEntity already followed the correct pattern.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>